[sc-78] add e2e playwright setup (#32)

--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,8 @@ bun.lockb
 # TS declarations
 .wp_federation
 .bun-cache
+
+# Playwright reports and test results
+e2e/playwright-report/
+**/test-results/
+
