feat: initialize records pages mfe

--- a/apps/shell/tsconfig.json
+++ b/apps/shell/tsconfig.json
@@ -11,7 +11,8 @@
         "../../packages/shared/types/src/*"
       ],
       "headerPages/*": ["../header-pages/.wp_federation/headerPages/*"],
-      "sidebarPages/*": ["../sidebar-pages/.wp_federation/sidebarPages/*"]
+      "sidebarPages/*": ["../sidebar-pages/.wp_federation/sidebarPages/*"],
+      "recordsPages/*": ["../records-pages/.wp_federation/recordsPages/*"]
     }
   }
 }
