feat: add DocumentationPages component and integrate with Shell
- Registered DocumentationPages component in the Shell application.
- Added routing for DocumentationPages with error boundary handling.
- Updated TypeScript configuration to include documentationPages path.
- Enhanced module federation configuration to expose DocumentationPages.
- Configured remote entry for DocumentationPages in development and production environments.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -119,8 +119,8 @@
     "**/.turbo/**": true,
     "**/coverage": false,
     "**/coverage/**": false,
-    "**/.wp_federation": true,
-    "**/.wp_federation/**": true,
+    "**/.wp_federation": false,
+    "**/.wp_federation/**": false,
     "**/playwright-report": false,
     "**/playwright-report/**": false,
     "**/test-results": false,
@@ -136,7 +136,7 @@
     "**/temp": true,
     "**/temp/**": true,
     "**/types/**": true,
-    "**/*.d.ts": true,
+    "**/*.d.ts": false,
     "**/*.d.ts.map": true,
     "**/*.tsbuildinfo": true
   },
