[sc-136] add page-header (#47)

--- a/apps/shell/tsconfig.json
+++ b/apps/shell/tsconfig.json
@@ -10,7 +10,9 @@
         "../../packages/shared/.wp_federation/shared/*",
         "../../packages/shared/types/src/*"
       ],
-      "headerPages/*": ["../header-pages/.wp_federation/headerPages/*"]
+      "headerPages/*": ["../header-pages/.wp_federation/headerPages/*"],
+      "sidebarPages/*": ["../sidebar-pages/.wp_federation/sidebarPages/*"],
+      "recordsPages/*": ["../records-pages/.wp_federation/recordsPages/*"]
     }
   }
 }
