--- a/package.json
+++ b/package.json
@@ -33,18 +33,19 @@
     "ci": "bun run types:build && bun run typecheck && bun run test:ci && bun run biome:check",
     "clean": "rimraf apps/*/node_modules packages/*/node_modules bun.lock node_modules",
     "prepare": "husky",
-    "preview": "bunx cross-env-shell \"SHELL_PREVIEW_PORT=8080 SHARED_PREVIEW_PORT=8081 HEADER_PAGES_PREVIEW_PORT=8082 SHARED_HOST_BASE_URL=http://localhost:8081/ HEADER_PAGES_HOST_BASE_URL=http://localhost:8082/ turbo run build --force && bun run preview:serve\"",
-    "preview:serve": "concurrently --kill-others-on-fail -n shell,shared,header -c green,magenta,cyan \"cd apps/shell && bunx serve -s dist -l 8080\" \"cd packages/shared && bunx serve -s dist -l 8081\" \"cd apps/header-pages && bunx serve -s dist -l 8082\"",
-    "preview:serve:win": "concurrently -n shell,shared,header -c green,magenta,cyan \"cd apps/shell && bunx serve -s dist -l 8080\" \"cd packages/shared && bunx serve -s dist -l 8081\" \"cd apps/header-pages && bunx serve -s dist -l 8082\""
+    "preview": "bunx cross-env-shell \"SHELL_PREVIEW_PORT=8080 SHARED_PREVIEW_PORT=8081 HEADER_PAGES_PREVIEW_PORT=8082 SIDEBAR_PAGES_PREVIEW_PORT=8083 RECORDS_PAGES_PREVIEW_PORT=8084 DOCUMENTATION_PAGES_PREVIEW_PORT=8085 SHARED_HOST_BASE_URL=http://localhost:8081/ HEADER_PAGES_HOST_BASE_URL=http://localhost:8082/ SIDEBAR_PAGES_HOST_BASE_URL=http://localhost:8083/ RECORDS_PAGES_HOST_BASE_URL=http://localhost:8084/ DOCUMENTATION_PAGES_HOST_BASE_URL=http://localhost:8085/ turbo run build --force && bun run preview:serve\"",
+    "preview:serve": "concurrently --kill-others-on-fail -n shell,shared,header,sidebar,records,docs -c green,magenta,cyan,blue,yellow,red \"cd apps/shell && bunx http-server dist -p 8080 --cors -c-1\" \"cd packages/shared && bunx http-server dist -p 8081 --cors -c-1\" \"cd apps/header-pages && bunx http-server dist -p 8082 --cors -c-1\" \"cd apps/sidebar-pages && bunx http-server dist -p 8083 --cors -c-1\" \"cd apps/records-pages && bunx http-server dist -p 8084 --cors -c-1\" \"cd apps/documentation-pages && bunx http-server dist -p 8085 --cors -c-1\"",
+    "preview:serve:win": "concurrently -n shell,shared,header,sidebar,records,docs -c green,magenta,cyan,blue,yellow,red \"cd apps/shell && bunx http-server dist -p 8080 --cors -c-1\" \"cd packages/shared && bunx http-server dist -p 8081 --cors -c-1\" \"cd apps/header-pages && bunx http-server dist -p 8082 --cors -c-1\" \"cd apps/sidebar-pages && bunx http-server dist -p 8083 --cors -c-1\" \"cd apps/records-pages && bunx http-server dist -p 8084 --cors -c-1\" \"cd apps/documentation-pages && bunx http-server dist -p 8085 --cors -c-1\""
   },
   "devDependencies": {
-    "dotenv-cli": "^10.0.0",
-    "@commitlint/config-conventional": "^19.8.1",
     "@biomejs/biome": "^2.2.4",
+    "@commitlint/config-conventional": "^19.8.1",
     "commitlint": "^19.8.1",
-    "cross-env": "^10.0.0",
-    "husky": "^9.1.7",
     "concurrently": "^9.2.1",
+    "cross-env": "^10.0.0",
+    "dotenv-cli": "^10.0.0",
+    "http-server": "^14.1.1",
+    "husky": "^9.1.7",
     "lint-staged": "^16.1.6",
     "rimraf": "^6.0.1",
     "serve": "^14.2.5",
