feat: add tests for modals, tables, and hooks in Mobile Banking
- Implemented unit tests for ConfirmModal, FraudModal, and SuccessModal in Modals.test.tsx.
- Created tests for PrimaryTable and TransactionsTable components to validate rendering and actions.
- Added tests for useTableData hook to ensure correct initialization and filtering of data.
- Developed mock data for primary and transaction rows to facilitate testing.
- Enhanced shared components mock to support testing of modals and dropdowns.
- Updated CancelsBlocked page tests to cover rendering, filtering, and user interactions.
- Refactored service imports to use mock data for testing purposes.

--- a/apps/documentation-pages/bunfig.toml
+++ b/apps/documentation-pages/bunfig.toml
@@ -5,6 +5,8 @@ coverageReporter = [ "text", "lcov", ]
 coveragePathIgnorePatterns = [
   "**/@config/**",
   "**/types/**",
+  "**/components/ui/**",
+  "**/assets/**",
   "**/__mocks__/**",
   "**/e2e/**",
 ]
