--- a/apps/records-pages/bunfig.toml
+++ b/apps/records-pages/bunfig.toml
@@ -5,6 +5,8 @@ coverageReporter = [ "text", "lcov", ]
 coveragePathIgnorePatterns = [
   "**/@config/**",
   "**/types/**",
+  "**/components/ui/**",
+  "**/assets/**",
   "**/__mocks__/**",
   "**/e2e/**",
 ]
