chore: update devDependencies in package.json and rspack-config
- Added @swc/helpers version 0.5.17 to devDependencies.
- Added webpack-dev-server version 5.2.2 to rspack-config dependencies.

--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   "devDependencies": {
     "@biomejs/biome": "^2.2.4",
     "@commitlint/config-conventional": "^19.8.1",
+    "@swc/helpers": "^0.5.17",
     "commitlint": "^19.8.1",
     "concurrently": "^9.2.1",
     "cross-env": "^10.0.0",
