--- a/packages/@config/rspack-config/package.json
+++ b/packages/@config/rspack-config/package.json
@@ -25,6 +25,7 @@
     "@rsdoctor/rspack-plugin": "^1.2.3",
     "@rspack/cli": "^1.5.2",
     "@rspack/core": "^1.5.2",
-    "typescript": "^5.7.2"
+    "typescript": "^5.7.2",
+    "webpack-dev-server": "^5.2.2"
   }
 }
