--- a/apps/records-pages/package.json
+++ b/apps/records-pages/package.json
@@ -26,10 +26,12 @@
   "dependencies": {
     "@tanstack/react-query": "^5.90.3",
     "axios": "^1.12.2",
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0",
+    "date-fns": "^4.1.0",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
     "react-helmet": "^6.1.0",
-    "react-router": "^7.9.4"
+    "react-router": "^7.8.1",
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "@babel/core": "^7.28.4",
